make sure code compiles and add missing comboBox factory methods for tuples...